new initial commit

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git and GitHub/title>
+    <title>Git and GitHub</title>
 </head>
 <body>
-    <p>Hello World!!!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam est architecto, illo corporis consectetur, quam neque pariatur incidunt sapiente dolore inventore minima commodi provident, eligendi consequatur magnam illum placeat? Tempore sed sequi architecto repellat, quo cumque optio blanditiis facilis hic consequatur minima aliquid, aperiam iusto nemo dolor similique quasi quod ducimus, explicabo pariatur ipsum? Dolores, molestias. At quae expedita fugiat numquam labore ratione aperiam, nesciunt unde animi enim asperiores tempora optio magnam. Dolorum quo debitis facilis maxime, quidem obcaecati, illo tenetur totam accusantium perferendis aut blanditiis, ullam repellat. Aperiam accusamus assumenda facilis, tenetur nesciunt id adipisci excepturi consequatur eum itaque.</p>
+    <h1>Hello World!</h1>
+    <h2>Hello World!</h2>
+    <h3>Hello World!</h3>
+    <h4>Hello World!</h4>
+    <h5>Hello World!</h5>
+    <h6>Hello World!</h6>
 </body>
 </html>
