New intial commit

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git and GitHub</title>
+    <title>Assignment Week 34</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam est architecto, illo corporis consectetur, quam neque pariatur incidunt sapiente dolore inventore minima commodi provident, eligendi consequatur magnam illum placeat? Tempore sed sequi architecto repellat, quo cumque optio blanditiis facilis hic consequatur minima aliquid, aperiam iusto nemo dolor similique quasi quod ducimus, explicabo pariatur ipsum? Dolores, molestias. At quae expedita fugiat numquam labore ratione aperiam, nesciunt unde animi enim asperiores tempora optio magnam. Dolorum quo debitis facilis maxime, quidem obcaecati, illo tenetur totam accusantium perferendis aut blanditiis, ullam repellat. Aperiam accusamus assumenda facilis, tenetur nesciunt id adipisci excepturi consequatur eum itaque.</p>
-    <h1>Hello World!</h1>
-    <h2>Hello World!</h2>
-    <h3>Hello World!</h3>
-    <h4>Hello World!</h4>
-    <h5>Hello World!</h5>
-    <h6>Hello World!</h6>
+    <!-- This is just practice -->
+   <h3 style="color: rgb(15, 60, 197); border: 1px solid red;border-radius: 10px; text-align: center; background-color: orange; font-size: 24px;">Visual Formating</h3>
+    <p>Lorem <i>ipsum dolor sit amet consectetur</i> adipisicing elit. <b>Temporibus totam autem</b> unde facere sequi <u>molestias porro sed doloremquecum</u> eligendi magni at pariatur earum beatae exercitationem, veritatis ullam necessitatibus inventore atque iusto repudiandae! Ab ducimus rerum libero, dicta neque quaerat delectus aliquam, <s>inventore obcaecati</s> maxime deleniti ex eos assumenda! <span><sub>Velit in dolorem rem facilis eveniet id impedit a quas est</sub></span>, ab omnis, quo, fugiat earum expedita nemo dolore error. <span><sup>Quod ad unde modi ab similique delectus,</sup></span> quam dolore labore temporibus. Quibusdam nulla tempora ea ratione dolorum a placeat, temporibus, alias nostrum animi dolores, asperiores tenetur eligendi veniam possimus perferendis.</p>
+    <br>
+    <h3 style="color: rgb(15, 60, 197); border: 1px solid red;border-radius: 10px; text-align: center; background-color: orange; font-size: 24px;">Logical Formating</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <em>Voluptas harum eos sint dicta laborum dignissimos,</em> quaerat ea! Aliquam adipisci odit, <strong>modi consectetur libero pariatur</strong> architecto dignissimos nulla, illo quibusdam placeat, delectus aspernatur! <ins>Recusandae, repellendus?</ins> Quo, expedita obcaecati omnis <del>nemo labore, tempora praesentium,</del> optio facilis explicabo doloremque porro qui nostrum laudantium aliquam beatae minima non ex? Maiores totam omnis, eaque architecto dicta beatae commodi sit modi id voluptatibus <code>libero animi illo deleniti consequatur</code> accusantium! Ullam consequatur perspiciatis, fuga pariatur ea praesentium quis dolorem! <small>Perferendis quos voluptatem ex atque</small> eum unde rerum obcaecati quisquam vel tempore maiores facilis optio, praesentium laboriosam quas?</p>  
 </body>
 </html>
