--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         ex eos assumenda! <span><sub>Velit in dolorem rem facilis eveniet id impedit a quas est</sub></span>, 
         ab omnis, quo, fugiat earum expedita nemo dolore error. <span><sup>Quod ad unde modi ab similique 
         delectus,</sup></span> quam dolore labore temporibus. Quibusdam nulla tempora ea ratione dolorum a 
-        placeat, temporibus, alias nostrum animi dolores, asperiores tenetur eligendi veniam possimus perferendis.</p>
+        placeat, temporibus, alias nostrum animi dolores, asperiores tenetur eligendi veniam possimus perferendis.
+    </p>
     <br>
     <h3 style="color: rgb(15, 60, 197); border: 1px solid red;border-radius: 10px; text-align: center; 
     background-color: orange; font-size: 24px;">Logical Formating</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <em>Voluptas harum eos sint dicta laborum dignissimos,
-    </em> quaerat ea! Aliquam adipisci odit, <strong>modi consectetur libero pariatur</strong> architecto dignissimos 
-    nulla, illo quibusdam placeat, delectus aspernatur! <ins>Recusandae, repellendus?</ins> Quo, expedita obcaecati omnis 
-    <del>nemo labore, tempora praesentium,</del> optio facilis explicabo doloremque porro qui nostrum laudantium aliquam 
-    beatae minima non ex? Maiores totam omnis, eaque architecto dicta beatae commodi sit modi id voluptatibus 
-    <code>libero animi illo deleniti consequatur</code> accusantium! Ullam consequatur perspiciatis, fuga pariatur 
-    ea praesentium quis dolorem! <small>Perferendis quos voluptatem ex atque</small> eum unde rerum obcaecati quisquam 
-    vel tempore maiores facilis optio, praesentium laboriosam quas?</p>  
+        </em> quaerat ea! Aliquam adipisci odit, <strong>modi consectetur libero pariatur</strong> architecto dignissimos 
+        nulla, illo quibusdam placeat, delectus aspernatur! <ins>Recusandae, repellendus?</ins> Quo, expedita obcaecati omnis 
+        <del>nemo labore, tempora praesentium,</del> optio facilis explicabo doloremque porro qui nostrum laudantium aliquam 
+        beatae minima non ex? Maiores totam omnis, eaque architecto dicta beatae commodi sit modi id voluptatibus 
+        <code>libero animi illo deleniti consequatur</code> accusantium! Ullam consequatur perspiciatis, fuga pariatur 
+        ea praesentium quis dolorem! <small>Perferendis quos voluptatem ex atque</small> eum unde rerum obcaecati quisquam 
+        vel tempore maiores facilis optio, praesentium laboriosam quas?
+    </p>  
 </body>
 </html>
