--- a/index.html
+++ b/index.html
@@ -4,32 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment Week 34</title>
+    <title>Webpage</title>
+    <link rel="stylesheet" href="/Styles/index.css">
+    <link rel="stylesheet" href="/Fonts/fonts.ttf">
 </head>
 <body>
-    <!-- This is just practice -->
-   <h3 style="color: rgb(15, 60, 197); border: 1px solid red;border-radius: 10px; text-align: center; 
-   background-color: orange; font-size: 24px;">Visual Formating</h3>
-    <p style="height: 500px; height: 300px;">Lorem <i>ipsum dolor sit amet consectetur</i> adipisicing elit. 
-        <b>Temporibus totam autem</b> unde facere sequi <u>molestias porro sed doloremquecum</u> eligendi magni 
-        at pariatur earum beatae exercitationem, veritatis ullam necessitatibus inventore atque iusto repudiandae! 
-        Ab ducimus rerum libero, dicta neque quaerat delectus aliquam, <s>inventore obcaecati</s> maxime deleniti 
-        ex eos assumenda! <span><sub>Velit in dolorem rem facilis eveniet id impedit a quas est</sub></span>, 
-        ab omnis, quo, fugiat earum expedita nemo dolore error. <span><sup>Quod ad unde modi ab similique 
-        delectus,</sup></span> quam dolore labore temporibus. Quibusdam nulla tempora ea ratione dolorum a 
-        placeat, temporibus, alias nostrum animi dolores, asperiores tenetur eligendi veniam possimus perferendis.
-    </p>
-    <br>
-    <h3 style="color: rgb(15, 60, 197); border: 1px solid red;border-radius: 10px; text-align: center; 
-    background-color: orange; font-size: 24px;">Logical Formating</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <em>Voluptas harum eos sint dicta laborum dignissimos,
-        </em> quaerat ea! Aliquam adipisci odit, <strong>modi consectetur libero pariatur</strong> architecto dignissimos 
-        nulla, illo quibusdam placeat, delectus aspernatur! <ins>Recusandae, repellendus?</ins> Quo, expedita obcaecati omnis 
-        <del>nemo labore, tempora praesentium,</del> optio facilis explicabo doloremque porro qui nostrum laudantium aliquam 
-        beatae minima non ex? Maiores totam omnis, eaque architecto dicta beatae commodi sit modi id voluptatibus 
-        <code>libero animi illo deleniti consequatur</code> accusantium! Ullam consequatur perspiciatis, fuga pariatur 
-        ea praesentium quis dolorem! <small>Perferendis quos voluptatem ex atque</small> eum unde rerum obcaecati quisquam 
-        vel tempore maiores facilis optio, praesentium laboriosam quas?
-    </p>  
+    <header>
+        <nav id="header">
+            <div class="container">
+                <div class="navbar-header">
+                    <h1>TDemir Webpage</h1>
+                </div>
+                <div class="nav-list">
+                    <ul>
+                        <li>
+                            <a href="https://sundsgarden.se/utbildningar-kurser/.html" >
+                                <span class="glyphicon">Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.w3schools.com/css/default.asp.html">
+                                <span class="glyphicon">About Us</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.google.com/.html">
+                                <span class="glyphicon">Contact Us</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="sign-up.html">
+                                <span class="glyphicon">Sign Up</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="login">
+                                <span class="glyphicon">Login</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div id="main">
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore ipsum, et alias maxime ipsam quaerat numquam? 
+                    Quibusdam, voluptatibus, quisquam laborum dolor error a minus commodi magni minima quam non vitae nihil ratione 
+                    ducimus aut qui dolores repellat dicta aperiam illo debitis eius, nam culpa? <b>Ullam at beatae velit</b> quibusdam quidem 
+                    eius debitis modi nostrum quaerat enim rem aperiam cupiditate, eveniet sint, placeat minus aspernatur inventore autem 
+                    hic laborum sed fugiat vero voluptate nesciunt. Labore quaerat natus obcaecati repellendus, eos impedit expedita. 
+                    Voluptatum nihil perferendis sit dolorem rerum quos, eligendi harum praesentium perspiciatis? Officiis, quam ut. 
+                    Reprehenderit fugit perspiciatis alias mollitia!</p>
+                    <img src="/Images/cat.jpg" alt="cat1">
+            </section>
+            <section>
+                <p><u>Lorem ipsum dolor sit amet consectetur adipisicing elit</u>.Error non nulla tempora aliquam autem, saepe ullam a nemo, 
+                    consequatur quos reprehenderit blanditiis eum quis quia, accusantium quisquam ducimus natus expedita nobis labore 
+                    odio velit. Debitis animi excepturi sunt nulla nemo ipsam tenetur necessitatibus facilis error dignissimos minima 
+                    esse fugiat tempore deleniti magni rem tempora, obcaecati quisquam alias voluptate. Earum cupiditate rerum culpa
+                    quidem temporibus? Est, quisquam nulla illo quas nisi mollitia assumenda. Placeat voluptatibus tempore magni quia 
+                    eos consequuntur debitis distinctio temporibus, sint ut odio quae sequi, libero odit cumque esse quos magnam error 
+                    obcaecati enim? Autem iusto modi aliquam.</p>
+                    <img src="/Images/cat.jpg" alt="cat2">
+            </section>
+            <section>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis nemo hic culpa et incidunt nihil eaque at! 
+                    Dolorem sunt <s>eligendi qui obcaecati</s> porro voluptates mollitia repudiandae quas quae, rem eos id alias neque veritatis 
+                    incidunt suscipit reprehenderit aliquid unde, sequi magni similique earum tempora! Ea a modi nisi voluptatem ab maxime 
+                    officia quae nesciunt vero atque, esse odio nemo dolores? Veniam vitae facere beatae, rem quaerat dolore repellendus 
+                    tempora facilis minima pariatur consequatur, reprehenderit vel! Veritatis corrupti vel ullam, dicta excepturi eveniet 
+                    similique deleniti animi provident qui enim sapiente et quod magni illum. Cupiditate repudiandae eaque fugit autem hic.</p>
+                    <img src="/Images/cat.jpg" alt="cat3">
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div id="footer">
+            <section class="contact">
+                <span><b>Contact:</b></span>
+                <p>turgaydemir234@gmail.com</p>
+            </section>
+            <div class="text-center">&copy; Last update: 2021/Aug/30</div>
+        </div>
+    </footer>
 </body>
 </html>
